# llm-demo-ep

./: Cargo.toml
runtime_assets/vecdb/retail-vec.lance/_transactions/: 0-8059ae48-d323-4403-8ce1-30637dce7ab7.txn  0-9d047c0e-3dc5-4aef-a4c5-9d5762c0ea0d.txn  1-4f303a96-2015-4663-bc68-306dadaf852e.txn
runtime_assets/vecdb/retail-vec.lance/_versions/: 1.manifest  2.manifest
src/: embedder.rs  llm_utils.rs  main.rs  vecdb.rs
