[package]
name = "llm-demo-ep"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
axum = { version = "0.7.9" , features = ["macros"]}
reqwest = "0.12.9"
serde = "1.0.215"
serde_json = "1.0.133"
tokio = { version = "1.42.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
typed-builder = "0.20.0"
tower-http = { version = "0.6.2", features = ["cors"] }
lancedb = { version = "0.14.0"}
arrow-array = "53.2.0"
serde_arrow = { version = "0.12.2", features = ["arrow-53"] }
arrow-schema = "53.2.0"
futures = "0.3.31"
tempdir = "0.3.7"
# for embedding
candle-core = { version = "0.8.0" }
candle-transformers = { version = "0.8.0" }
candle-nn = { version = "0.8.0" }
tokenizers = "0.21.0"
hf-hub = { version = "0.3.2", features = [
    "tokio",
] }